hide body overflow when modal is open to prevent two scrollbars

--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -11,6 +11,10 @@ body {
   background: $white;
   color: $gray;
   line-height: 1.5;
+
+  &.has-modal {
+    overflow: hidden;
+  }
 }
 
 img {
